--- a/EduTune/Other/Other.storyboard
+++ b/EduTune/Other/Other.storyboard
@@ -315,7 +315,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="40W-fc-wzC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2588" y="127"/>
+            <point key="canvasLocation" x="4585" y="972"/>
         </scene>
         <!--MoreVC-->
         <scene sceneID="6G2-fu-M1d">
@@ -369,15 +369,15 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Section title" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cGN-kf-s4z">
-                                                    <rect key="frame" x="16" y="16.666666666666664" width="358" height="21.666666666666664"/>
-                                                    <fontDescription key="fontDescription" name="Urbanist-SemiBold" family="Urbanist" pointSize="18"/>
+                                                    <rect key="frame" x="16" y="30.666666666666671" width="358" height="19.333333333333329"/>
+                                                    <fontDescription key="fontDescription" name="Urbanist-Medium" family="Urbanist" pointSize="16"/>
                                                     <color key="textColor" name="Grey900"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
                                             <constraints>
+                                                <constraint firstAttribute="bottom" secondItem="cGN-kf-s4z" secondAttribute="bottom" constant="5" id="6eG-NU-1Wr"/>
                                                 <constraint firstItem="cGN-kf-s4z" firstAttribute="leading" secondItem="a0f-yX-yMq" secondAttribute="leading" constant="16" id="6mt-A2-adk"/>
-                                                <constraint firstItem="cGN-kf-s4z" firstAttribute="centerY" secondItem="a0f-yX-yMq" secondAttribute="centerY" id="Dej-7Z-cGS"/>
                                                 <constraint firstAttribute="trailing" secondItem="cGN-kf-s4z" secondAttribute="trailing" constant="16" id="mbm-Wu-WKd"/>
                                             </constraints>
                                         </tableViewCellContentView>
@@ -393,16 +393,16 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Item" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rn0-4Y-oq9">
-                                                    <rect key="frame" x="60" y="16.666666666666664" width="278" height="21.666666666666664"/>
-                                                    <fontDescription key="fontDescription" name="Urbanist-SemiBold" family="Urbanist" pointSize="18"/>
+                                                    <rect key="frame" x="55" y="17.333333333333329" width="283" height="20.666666666666671"/>
+                                                    <fontDescription key="fontDescription" name="Urbanist-Regular" family="Urbanist" pointSize="17"/>
                                                     <color key="textColor" name="Grey900"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_document" translatesAutoresizingMaskIntoConstraints="NO" id="PP8-c7-IxN">
-                                                    <rect key="frame" x="16" y="13.666666666666664" width="28" height="28"/>
+                                                    <rect key="frame" x="16" y="16" width="23" height="23"/>
                                                     <constraints>
-                                                        <constraint firstAttribute="width" constant="28" id="Kds-Hf-Q29"/>
-                                                        <constraint firstAttribute="height" constant="28" id="mfj-OS-6ee"/>
+                                                        <constraint firstAttribute="width" constant="23" id="Kds-Hf-Q29"/>
+                                                        <constraint firstAttribute="height" constant="23" id="mfj-OS-6ee"/>
                                                     </constraints>
                                                 </imageView>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_arrow_right" translatesAutoresizingMaskIntoConstraints="NO" id="JmN-ZX-Z4V">
@@ -626,7 +626,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qFJ-xc-Fc7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3282" y="134"/>
+            <point key="canvasLocation" x="2592" y="127"/>
         </scene>
         <!--ReferralVC-->
         <scene sceneID="eGJ-1B-mZU">
@@ -937,7 +937,7 @@ Code</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="anx-h3-eAA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3924.6153846153843" y="126.54028436018957"/>
+            <point key="canvasLocation" x="3872" y="972"/>
         </scene>
         <!--LogoutVC-->
         <scene sceneID="3fj-JC-SIV">
@@ -1041,7 +1041,7 @@ Code</string>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="vBF-pf-Thq" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="4585" y="127"/>
+            <point key="canvasLocation" x="4585" y="306"/>
         </scene>
     </scenes>
     <resources>
